tests/syntax/bad/testfile-expr16-1.scala
class A { def m() { var x = (A.x)0 } }
object Main { def main(args: Array[String]) { } }
